samples/_failures_safe/1761005543_2d65bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb6e891f.c: In function ‘main’:
./samples/SAFE/__tmp_cb6e891f.c:143:12: error: missing terminating " character
  143 |     printf("CPU time used: %.6f seconds\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cb6e891f.c:143:5: error: expected expression at end of input
  143 |     printf("CPU time used: %.6f seconds\n
      |     ^~~~~~
./samples/SAFE/__tmp_cb6e891f.c:143:5: error: expected declaration or statement at end of input
